--- a/Extra_3_propio/nbproject/project.properties
+++ b/Extra_3_propio/nbproject/project.properties
@@ -35,7 +35,8 @@ dist.jlink.output=${dist.jlink.dir}/Extra_3_propio
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${reference.menuDeOpciones.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -76,6 +77,8 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.menuDeOpciones=../../Nueva carpeta/menuDeOpciones
+reference.menuDeOpciones.jar=${project.menuDeOpciones}/dist/menuDeOpciones.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
